<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/ly_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp">
        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uvc_dialog_setting_title"
            android:textSize="22sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/text_title"
            android:text="@string/uvc_dialog_setting_reset"
            android:textColor="@color/customBlue"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ly_auto_focus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_auto_focus"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <Switch
            android:id="@+id/switch_auto_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_focus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_focus"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_focus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/darker_gray"/>

    <LinearLayout
        android:id="@+id/ly_auto_contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_auto_contrast"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <Switch
            android:id="@+id/switch_auto_contrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_contrast"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_contrast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/darker_gray"/>

    <LinearLayout
        android:id="@+id/ly_auto_hue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_auto_hue"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <Switch
            android:id="@+id/switch_auto_hue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_hue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_hue"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_hue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/darker_gray"/>

    <LinearLayout
        android:id="@+id/ly_auto_white_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_auto_white_balance"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <Switch
            android:id="@+id/switch_auto_white_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_white_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_white_balance"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_white_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/darker_gray"/>

    <LinearLayout
        android:id="@+id/ly_brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_brightness"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_brightness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/darker_gray"/>

    <LinearLayout
        android:id="@+id/ly_saturation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_saturation"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_saturation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/darker_gray"/>

    <LinearLayout
        android:id="@+id/ly_sharpness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_sharpness"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_sharpness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/darker_gray"/>

    <LinearLayout
        android:id="@+id/ly_gamma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_gamma"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_gamma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/darker_gray"/>
    <LinearLayout
        android:id="@+id/ly_backlight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_backlight"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_backlight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/darker_gray"/>
    <LinearLayout
        android:id="@+id/ly_gain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="90dp"
            android:text="@string/uvc_gain"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"/>
        <SeekBar
            android:id="@+id/seek_gain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"/>
    </LinearLayout>

</LinearLayout>